# trading_bot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  implementation_plan.md  mytext.txt  pyproject.toml  system_design.md
doc/: guide.md  implementation_plan.md  system_design.md
gateway/: .env.example  Dockerfile  requirements.txt
gateway/app/: config.py  main.py  mt5_client.py  order_executor.py  risk_limits.py
gateway/tests/: test_gateway.py
hub/: Dockerfile  requirements.txt
hub/app/: config.py  main.py
hub/app/bot/: handlers.py  keyboards.py  messages.py
hub/app/models/: __init__.py  proposal.py
hub/app/services/: llm_agent.py  market_data.py  market_digest.py  news_collector.py  rate_limiter.py  risk.py  scheduled_proposal.py
hub/app/services/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_compat.py
hub/app/utils/: crypto.py
hub/tests/: test_e2e_gateway.py  test_gateway_integration.py  test_llm_providers.py  test_market_data.py  test_market_digest.py  test_news_collector.py  test_proposals.py  test_rate_limiter.py  test_scheduled_proposal.py
scripts/: setup.sh  test_mt5_init.py
shared/: constants.py  schemas.py  types.py
shared/utils/: crypto.py
