[project]
name = "tradebot"
version = "0.1.0"
description = "Human-in-the-Loop AI Trading Bot (Exness + MT5 + Telegram)"
requires-python = ">=3.12"
authors = [
    {name = "TradeBot"},
]

dependencies = []

[project.optional-dependencies]
hub = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-telegram-bot[job-queue]>=21.0",
    "openai>=1.55.0",
    "httpx>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "apscheduler>=3.10.4",
    "structlog>=24.4.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
]
gateway = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "MetaTrader5>=5.0.45",
    "httpx>=0.28.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pip-audit>=2.7.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["hub/tests", "gateway/tests"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
